--- a/roles/ui/files/FWO.UI/Pages/Reporting/Report.razor
+++ b/roles/ui/files/FWO.UI/Pages/Reporting/Report.razor
@@ -500,7 +500,9 @@
             processing = true;
             SetProperRoleForReport();
             await PrepareReportGeneration();
-            currentReport = await ReportGenerator.GenerateFromTemplate(ConstructReportTemplate(), apiConnection, userConfig, DisplayMessageInUi, token);
+            ReportTemplate temp = ConstructReportTemplate();
+            
+            currentReport = await ReportGenerator.GenerateFromTemplate(temp, apiConnection, userConfig, DisplayMessageInUi, token);
             processing = false;
             PostProcess();
         }
@@ -577,7 +579,9 @@
 
     private ReportTemplate ConstructReportTemplate(string? tempFilter = null)
     {
-        return new ReportTemplate(tempFilter ?? filterInput, actReportFilters.ToReportParams());
+        ReportTemplate template = new ReportTemplate(tempFilter ?? filterInput, actReportFilters.ToReportParams());
+        template.ReportParams.ComplianceFilter.ShowNonImpactRules = _showAnyRulesInComplianceReport;
+        return template;
     }
 
     private string PlaceholderFilter()
