Fix dispose bugs

--- a/roles/ui/files/FWO.UI/Shared/MainLayout.razor
+++ b/roles/ui/files/FWO.UI/Shared/MainLayout.razor
@@ -491,7 +491,7 @@
 
         _disposed = true;
 
-        if (!disposing)
+        if (disposing)
         {
             JwtEventService.OnPermissionChanged -= OnPermissionsChanged;
             JwtEventService.OnJwtAboutToExpire -= OnJwtAboutToExpire;
