--- a/roles/ui/files/FWO.UI/Pages/Certification.razor
+++ b/roles/ui/files/FWO.UI/Pages/Certification.razor
@@ -20,18 +20,18 @@
 
 @* ==== LEFT SIDEBAR ==== *@
 <Sidebar @ref="deviceSelectionSidebar" Collapsible="true" Resizeable="true" PositionLeft="true"
-    @bind-Width="sidebarLeftWidth">
+         @bind-Width="sidebarLeftWidth">
     <br>
     <div class="btn-group sticky-marker p-3 w-100">
         @if (processing == false)
         {
             <button type="button" class="btn btn-sm btn-primary"
-                @onclick="GenerateRecertificationReport">@userConfig.GetText("load_rules")</button>
+                    @onclick="GenerateRecertificationReport">@userConfig.GetText("load_rules")</button>
         }
         else
         {
             <button type="button" class="btn btn-sm btn-danger"
-                @onclick="() => CancelGeneration()">@(userConfig.GetText("stop_fetching"))</button>
+                    @onclick="() => CancelGeneration()">@(userConfig.GetText("stop_fetching"))</button>
         }
         <br>
     </div>
@@ -44,7 +44,7 @@
             <Authorized>
                 <div class="p-3">
                     <Dropdown ElementType="FwoOwner" ElementToString="@(o => o.Name)" Nullable="true"
-                        @bind-SelectedElement="selectedOwner" Elements="ownerList">
+                              @bind-SelectedElement="selectedOwner" Elements="ownerList">
                         <ElementTemplate Context="owner">
                             @owner.Name
                         </ElementTemplate>
@@ -55,7 +55,7 @@
                 @if (collectedOwnerships.Count > 1)
                 {
                     <Dropdown ElementType="FwoOwner" ElementToString="@(o => o.Name)" Nullable="true"
-                        @bind-SelectedElement="selectedOwner" Elements="collectedOwnerships">
+                              @bind-SelectedElement="selectedOwner" Elements="collectedOwnerships">
                         <ElementTemplate Context="owner">
                             @owner.Name
                         </ElementTemplate>
@@ -84,29 +84,29 @@
                     @if (rulesFound)
                     {
                         <button type="button" class="btn btn-sm btn-danger"
-                            @onclick="() => RequestExecuteSelected()">@(userConfig.GetText("execute_selected"))</button>
+                                @onclick="() => RequestExecuteSelected()">@(userConfig.GetText("execute_selected"))</button>
                     }
                     else
                     {
                         <button type="button" class="btn btn-sm btn-danger"
-                            disabled>@(userConfig.GetText("execute_selected"))</button>
+                                disabled>@(userConfig.GetText("execute_selected"))</button>
                     }
                 </Authorized>
                 <NotAuthorized>
                     <button type="button" class="btn btn-sm btn-danger"
-                        disabled>@(userConfig.GetText("execute_selected"))</button>
+                            disabled>@(userConfig.GetText("execute_selected"))</button>
                 </NotAuthorized>
             </AuthorizeView>
         }
     </div>
     <hr />
     <RulesReport Recertification="true" ReadonlyMode="readonlyMode" Managements="managementsReport"
-        RulesPerPage="rulesPerPage" @bind-SelectedRules="selectedRules"
-        SelectedReportType="ReportType.Recertification" />
+                 RulesPerPage="rulesPerPage" @bind-SelectedRules="selectedRules"
+                 SelectedReportType="ReportType.Recertification" />
 </div>
 
 <PopUp Title="@(userConfig.GetText("add_comment"))" Show="@AddCommentMode" Size=PopupSize.Large
-    OnClose="() => AddCommentMode = false">
+       OnClose="() => AddCommentMode = false">
 
     <Body>
         @if (AddCommentMode)
@@ -114,27 +114,27 @@
             <form onsubmit="return false">
                 <div class="form-group row">
                     <label for="comment" class="col-sm-2 col-form-label col-form-label-sm">@(userConfig.GetText("comment") +
-                                            (userConfig.CommentRequired ? "*:" : ":"))</label>
-                    <div class="col-sm-8">
-                        <input id="comment" type="text" class="form-control form-control-sm" @bind="actComment" />
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            (userConfig.CommentRequired ? "*:" : ":"))</label>
+                        <div class="col-sm-8">
+                            <input id="comment" type="text" class="form-control form-control-sm" @bind="actComment" />
+                        </div>
                     </div>
-                </div>
-            </form>
-        }
-    </Body>
-    <Footer>
-        <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-primary"
-                @onclick="() => ExecuteSelected()">@(userConfig.GetText("ok"))</button>
-            <button type="button" class="btn btn-sm btn-secondary"
-                @onclick="Cancel">@(userConfig.GetText("cancel"))</button>
-        </div>
-    </Footer>
-</PopUp>
+                </form>
+            }
+        </Body>
+        <Footer>
+            <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-primary"
+                        @onclick="() => ExecuteSelected()">@(userConfig.GetText("ok"))</button>
+                <button type="button" class="btn btn-sm btn-secondary"
+                        @onclick="Cancel">@(userConfig.GetText("cancel"))</button>
+            </div>
+        </Footer>
+    </PopUp>
 
 @*==== RIGHT SIDEBAR ====*@
 <RightSidebar @bind-Width="sidebarRightWidth" CurrentReport="currentReport" @bind-SelectedRules="selectedRules"
-    Recert="true" />
+              Recert="true" />
 
 @code
 {
@@ -198,21 +198,23 @@
 
     private async Task CollectOwnerships()
     {
-        userOwnerships = await apiConnection.SendQueryAsync<List<FwoOwner>>(OwnerQueries.getOwnersForUser, new
-        {
-            userDn =
-        userConfig.User.Dn
-        });
+        // this gets owners for which the user is the main responsible
+        userOwnerships = await apiConnection.SendQueryAsync<List<FwoOwner>>(OwnerQueries.getOwnersForUser,
+            new
+            {
+                userDn = userConfig.User.Dn
+            });
 
+        // this gets owners for which the user is member of an owning LOCAL group
         List<string> ownerGrpDns = await GroupAccess.GetGroupMemberships(middlewareClient, userConfig,
         DisplayMessageInUi);
         if (ownerGrpDns.Count > 0)
         {
-            groupOwnerships = await apiConnection.SendQueryAsync<List<FwoOwner>>(OwnerQueries.getOwnersFromGroups, new
-            {
-                groupDns =
-            ownerGrpDns
-            });
+            groupOwnerships = await apiConnection.SendQueryAsync<List<FwoOwner>>(OwnerQueries.getOwnersFromGroups,
+                new
+                {
+                    groupDns = ownerGrpDns
+                });
         }
 
         foreach (var owner in userOwnerships)
