--- a/roles/ui/files/FWO.UI/Shared/SettingsLayout.razor
+++ b/roles/ui/files/FWO.UI/Shared/SettingsLayout.razor
@@ -69,6 +69,13 @@
                     <NavLink class="nav-link" href="settings/owners">
                         <span class="@Icons.Owner"></span> @(userConfig.GetText("owners"))
                     </NavLink>
+                    <ul class="navbar-nav flex-column ms-3">
+                        <li class="nav-item px-2">
+                            <NavLink class="nav-link" href="settings/owners/appdataimport">
+                                <span class="@Icons.Import"></span> @(userConfig.GetText("import_app_data"))
+                            </NavLink>
+                        </li>
+                    </ul>
                 </li>
                 <hr />
                 <li class="nav-item px-2" data-toggle="tooltip" title="@(userConfig.GetText("U5013"))">
